creusot/tests/should_fail/prusti/deref/expired_mkref.stderr
error[creusot]: `(&'post u32, ())` cannot be moved from `'pre` to `'a` since it doesn't live long enough
                `'post` doesn't outlive `'a`
  --> expired_mkref.rs:14:20
   |
14 | #[after_expiry('a, x.mk_ref() == (y, ()).mk_ref())]
   |                    ^

error: aborting due to previous error

